--- a/alpha1/src/styles/app.scss
+++ b/alpha1/src/styles/app.scss
@@ -14,9 +14,72 @@ $hmcts-page-width: $govuk-page-width;
   background: govuk-colour("red");
 }
 
+.hmcts-primary-navigation__link {
+  &:focus {
+    color: white !important;
+    &:before {
+      background-color: white !important;
+    }
+  }
+}
+
 //===============================================
 // App specific styles
 //===============================================
+
+.app-calendar {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  padding: 0;
+  @include govuk-font(16);
+  @include govuk-clearfix;
+  border-left: 1px solid govuk-colour('grey-2');
+}
+
+.app-calendar--item {
+  text-align: center;
+  float: left;
+  width: 14.1%;
+  list-style: none;
+  border: 1px solid govuk-colour('grey-2');
+  margin-left: -1px;
+  margin-top: -1px;
+  padding: 0 0 5px 0;
+  min-height: 130px;
+  font-weight: 700;
+}
+
+.app-calendar--item_header {
+  border-color: govuk-colour('blue');
+  background: govuk-colour('blue');
+  color: govuk-colour('white');
+  padding: 5px 0;
+  min-height: 10px;
+}
+
+.app-calendar--item_day {
+  border-color: govuk-colour('grey-3');
+  background: govuk-colour('grey-3');
+  color: govuk-colour('black');
+  min-height: 10px;
+  padding: 5px 0;
+}
+
+.app-calendar--item_day_today {
+  border-color: govuk-colour('yellow');
+  background: govuk-colour('yellow');
+  color: govuk-colour('white');
+}
+
+.app-calendar--item_empty {
+  background: govuk-colour('grey-4');
+}
+
+.app-calendar--item_today {
+  background: govuk-tint(govuk-colour('yellow'), 95);
+}
 
 .app-offender-header {
   width: calc(100% - 205px);
