--- a/alpha1/src/styles/app.scss
+++ b/alpha1/src/styles/app.scss
@@ -10,6 +10,10 @@ $hmcts-page-width: $govuk-page-width;
 // Overrides
 //===============================================
 
+* {
+  box-sizing: border-box;
+}
+
 .govuk-phase-banner__content__tag {
   background: govuk-colour("red");
 }
@@ -23,9 +27,68 @@ $hmcts-page-width: $govuk-page-width;
   }
 }
 
+.hmcts-badge--red {
+  color: govuk-colour("bright-red");
+  border-color: govuk-colour("bright-red");
+}
+
+.hmcts-badge--small {
+  width: 35px;
+}
+
+.hmcts-badge--text-small {
+  font-size: 12px;
+}
+
 //===============================================
 // App specific styles
 //===============================================
+
+abbr {
+  text-decoration: none;
+}
+
+.app-identity-bar-warning {
+  background-color: govuk-tint(govuk-colour("blue"), 97);
+  box-shadow: inset 0 -1px 0 0 govuk-colour("blue");
+}
+
+.app-identity-bar--error {
+  background-color: govuk-tint(govuk-colour("red"), 95);
+  box-shadow: inset 0 -1px 0 0 govuk-colour("red");
+}
+
+.app-icon-down {
+  border: solid govuk-colour("blue");
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  margin: 0 10px 3px 10px;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
+
+.app-util-center {
+  display: inline-block;
+  margin: 0 auto;
+}
+
+.app-\!-inline {
+  display: inline;
+}
+
+.app-calendar--link {
+  text-decoration: none;
+}
+
+.app-\!-cursor-pointer {
+  cursor: pointer;
+}
+
+.app-hint-s {
+  @extend .govuk-hint;
+  font-size: 14px;
+}
 
 .app-calendar {
   display: flex;
@@ -35,15 +98,15 @@ $hmcts-page-width: $govuk-page-width;
   padding: 0;
   @include govuk-font(16);
   @include govuk-clearfix;
-  border-left: 1px solid govuk-colour('grey-2');
+  border-left: 1px solid govuk-colour("grey-2");
 }
 
 .app-calendar--item {
   text-align: center;
   float: left;
-  width: 14.1%;
+  width: 14.285%;
   list-style: none;
-  border: 1px solid govuk-colour('grey-2');
+  border: 1px solid govuk-colour("grey-2");
   margin-left: -1px;
   margin-top: -1px;
   padding: 0 0 5px 0;
@@ -52,33 +115,33 @@ $hmcts-page-width: $govuk-page-width;
 }
 
 .app-calendar--item_header {
-  border-color: govuk-colour('blue');
-  background: govuk-colour('blue');
-  color: govuk-colour('white');
+  border-color: govuk-colour("blue");
+  background: govuk-colour("blue");
+  color: govuk-colour("white");
   padding: 5px 0;
   min-height: 10px;
 }
 
 .app-calendar--item_day {
-  border-color: govuk-colour('grey-3');
-  background: govuk-colour('grey-3');
-  color: govuk-colour('black');
+  border-color: govuk-colour("grey-3");
+  background: govuk-colour("grey-3");
+  color: govuk-colour("black");
   min-height: 10px;
   padding: 5px 0;
 }
 
 .app-calendar--item_day_today {
-  border-color: govuk-colour('yellow');
-  background: govuk-colour('yellow');
-  color: govuk-colour('white');
+  border-color: govuk-colour("yellow");
+  background: govuk-colour("yellow");
+  color: govuk-colour("white");
 }
 
 .app-calendar--item_empty {
-  background: govuk-colour('grey-4');
+  background: govuk-colour("grey-4");
 }
 
 .app-calendar--item_today {
-  background: govuk-tint(govuk-colour('yellow'), 95);
+  background: govuk-tint(govuk-colour("yellow"), 95);
 }
 
 .app-offender-header {
