--- a/alpha1/src/styles/app.scss
+++ b/alpha1/src/styles/app.scss
@@ -29,6 +29,7 @@ $hmcts-page-width: $govuk-page-width;
 .hmcts-primary-navigation__link {
   &:focus {
     color: white !important;
+
     &:before {
       background-color: white !important;
     }
@@ -53,6 +54,10 @@ $hmcts-page-width: $govuk-page-width;
   border-color: govuk-colour("bright-red") !important;
 }
 
+.hmcts-identity-bar__container {
+  margin: 0;
+}
+
 //===============================================
 // App specific styles
 //===============================================
@@ -62,10 +67,20 @@ abbr {
 }
 
 .app-offence-title {
-  padding-left: 10px;
+  padding-left: 5px;
   padding-bottom: 0;
+
   &:last-child {
     padding-bottom: 0;
+  }
+}
+
+.app-alternate-rows-table {
+  tr:nth-child(even) {
+    background-color: govuk-colour("grey-4");
+  }
+  th, td {
+    padding: govuk-em(govuk-spacing(2), 19px) govuk-em(govuk-spacing(4), 19px) !important;
   }
 }
 
