Added route for add case

--- a/alpha1/src/styles/app.scss
+++ b/alpha1/src/styles/app.scss
@@ -58,6 +58,10 @@ $hmcts-page-width: $govuk-page-width;
   margin: 0;
 }
 
+.moj-tooltip--secondary {
+  cursor: default;
+}
+
 //===============================================
 // App specific styles
 //===============================================
