--- a/alpha1/src/styles/_table.scss
+++ b/alpha1/src/styles/_table.scss
@@ -38,6 +38,10 @@
       &:last-child {
         text-align: right;
       }
+
+      &:only-child {
+        text-align: left;
+      }
     }
 
     th {
