--- a/alpha1/src/styles/_button.scss
+++ b/alpha1/src/styles/_button.scss
@@ -17,7 +17,7 @@
 
   &:hover,
   &:focus {
-    background-color: govuk-colour("light-blue");
+    background-color: govuk-colour("blue");
 
     &[disabled] {
       background-color: govuk-colour("light-blue");
