--- a/alpha1/src/styles/_typography.scss
+++ b/alpha1/src/styles/_typography.scss
@@ -16,3 +16,11 @@ abbr {
   @extend .govuk-hint;
   font-size: 14px;
 }
+
+.app-\!-color-red {
+  color: govuk-colour("bright-red");
+}
+
+.app-\!-color-green {
+  color: govuk-colour("light-green");
+}
