--- a/alpha1/src/styles/_tooltip.scss
+++ b/alpha1/src/styles/_tooltip.scss
@@ -29,7 +29,7 @@
     }
   }
 
-  &.app-tooltip--secondary span {
+  &--secondary span {
     background: $govuk-brand-colour;
     &::before {
       border-right: 6px solid $govuk-brand-colour;
