--- a/alpha1/src/styles/_typography.scss
+++ b/alpha1/src/styles/_typography.scss
@@ -24,3 +24,7 @@ abbr {
 .app-\!-color-green {
   color: govuk-colour("light-green");
 }
+
+.app-\!-color-white {
+  color: govuk-colour("white");
+}
