--- a/alpha1/src/styles/_table.scss
+++ b/alpha1/src/styles/_table.scss
@@ -34,7 +34,7 @@
     }
   }
 
-  &.app-table--split-rows {
+  &--split-rows {
 
     thead tr:last-child {
       border-bottom: 2px solid govuk-colour("black");
@@ -58,7 +58,7 @@
     }
   }
 
-  &.app-table--row-counting {
+  &--row-counting {
 
     counter-reset: rowNumber;
 
