--- a/alpha1/src/styles/app.scss
+++ b/alpha1/src/styles/app.scss
@@ -73,11 +73,11 @@ $govuk-link-colour: #587088;
     color: govuk-colour("yellow");
     border-color: govuk-colour("yellow");
   }
-}
 
-.moj-badge:not(.moj-badge--small) {
-  min-width: 0;
-  padding: 5px 20px;
+  &:not(.moj-badge--small) {
+    min-width: 0;
+    padding: 5px 20px;
+  }
 }
 
 .moj-badge--small {
@@ -110,13 +110,14 @@ $govuk-link-colour: #587088;
   margin: 0; // Stop horizontal scrolling
 }
 
-.moj-primary-navigation__search {
-  float: right;
-  @include govuk-clearfix;
-}
-
-.moj-primary-navigation__container {
-  padding-top: 10px;
+.moj-primary-navigation {
+  &__search {
+    float: right;
+    @include govuk-clearfix;
+  }
+  &__container {
+    padding-top: 10px;
+  }
 }
 
 .moj-search {
@@ -134,6 +135,12 @@ $govuk-link-colour: #587088;
   }
   &:focus {
     color: $govuk-link-active-colour;
+    @if variable-exists(govuk-focused-text) {
+      @include govuk-focused-text;
+    }
+    @if variable-exists(govuk-focusable-fill) {
+      @include govuk-focusable-fill;
+    }
   }
 }
 
@@ -147,22 +154,29 @@ $govuk-link-colour: #587088;
 // App specific styles
 //===============================================
 
-.app-filter__header--blue {
-  background: $govuk-brand-colour;
+.app-filter__header {
+  &--blue, &--light-blue {
+    background: $govuk-brand-colour;
 
-  .moj-filter__header-title .govuk-heading-m {
-    color: govuk-colour("white");
+    .moj-filter__header-title .govuk-heading-m {
+      color: govuk-colour("white");
+    }
+  }
+
+  &--light-blue {
+    background: $govuk-link-colour;
   }
 }
 
-.app-back-to-top__link {
-  float: right;
-  margin: 15px 0;
-  @include govuk-clearfix;
-}
-
-.app-back-to-top__icon {
-  margin-right: 5px;
+.app-back-to-top {
+  &__link {
+    float: right;
+    margin: 15px 0;
+    @include govuk-clearfix;
+  }
+  &__icon {
+    margin-right: 5px;
+  }
 }
 
 .app-offence-title {
@@ -174,19 +188,22 @@ $govuk-link-colour: #587088;
   }
 }
 
-.app-risk-tag--high, .app-risk-tag--very-high {
-  color: govuk-colour("bright-red");
-  border-color: govuk-colour("bright-red");
+.app-risk-tag {
+  &--high, &--very-high {
+    color: govuk-colour("bright-red");
+    border-color: govuk-colour("bright-red");
+  }
 }
 
-.app-identity-bar-warning {
-  background-color: govuk-tint($govuk-brand-colour, 97);
-  box-shadow: inset 0 -1px 0 0 $govuk-brand-colour;
-}
-
-.app-identity-bar--error {
-  background-color: govuk-tint(govuk-colour("red"), 95);
-  box-shadow: inset 0 -1px 0 0 govuk-colour("red");
+.app-identity-bar {
+  &--warning {
+    background-color: govuk-tint($govuk-brand-colour, 97);
+    box-shadow: inset 0 -1px 0 0 $govuk-brand-colour;
+  }
+  &--error {
+    background-color: govuk-tint(govuk-colour("red"), 95);
+    box-shadow: inset 0 -1px 0 0 govuk-colour("red");
+  }
 }
 
 .app-icon-down {
@@ -203,14 +220,14 @@ $govuk-link-colour: #587088;
   cursor: pointer;
 }
 
-.app-offender-header {
-  width: calc(100% - 205px);
-}
-
-.app-offender-selection {
-  width: calc(100% - 102px);
-}
-
-.app-offender-image {
-  margin-right: 10px;
+.app-offender {
+  &-header {
+    width: calc(100% - 205px);
+  }
+  &-selection {
+    width: calc(100% - 102px);
+  }
+  &-image {
+    margin-right: 10px;
+  }
 }
