--- a/alpha1/src/styles/_table.scss
+++ b/alpha1/src/styles/_table.scss
@@ -26,7 +26,7 @@
 
   &.app-alternate-rows-table {
     tr:nth-child(even) {
-      background-color: govuk-colour("grey-4");
+      background-color: $moj-light-color;
     }
 
     th, td {
