--- a/alpha1/src/styles/_warning-text.scss
+++ b/alpha1/src/styles/_warning-text.scss
@@ -1,41 +1,12 @@
 .app-warning-text {
-
-  &--interrupt, &--critical {
-    @include govuk-responsive-padding(4, all);
-
-    color: govuk-colour("white");
-
-    .govuk-warning-text__icon {
-      left: 20px;
-      background: govuk-colour("white");
-      border-color: govuk-colour("white");
-    }
-  }
+  @include govuk-responsive-padding(4, all);
+  color: govuk-colour("black");
 
   &--interrupt {
-    background: $govuk-brand-colour;
-
-    .govuk-warning-text__icon {
-      color: $govuk-brand-colour;
-    }
+    background: govuk-tint(govuk-colour("light-blue"), 85);
   }
 
   &--critical {
     background: govuk-colour("red");
-
-    .govuk-warning-text__icon {
-      color: govuk-colour("red");
-    }
-  }
-
-  .govuk-warning-text__icon {
-    width: 38px;
-    height: 38px;
-
-    &--interrupt {
-      color: $govuk-brand-colour;
-      background: govuk-colour("white");
-      border-color: govuk-colour("white");
-    }
   }
 }
