--- a/alpha1/src/styles/_warning-text.scss
+++ b/alpha1/src/styles/_warning-text.scss
@@ -1,12 +1,41 @@
 .app-warning-text {
+
   @include govuk-responsive-padding(4, all);
   color: govuk-colour("black");
 
+  &--interrupt, &--critical {
+    @include govuk-responsive-padding(4, all);
+
+    color: govuk-colour("white");
+
+    .govuk-warning-text__icon {
+      left: 20px;
+      background: currentColor;
+      border-color: currentColor;
+    }
+  }
+
   &--interrupt {
     background: govuk-tint(govuk-colour("light-blue"), 85);
+    color: govuk-colour("black");
+
+    .govuk-warning-text__icon {
+      color: govuk-tint(govuk-colour("light-blue"), 85);
+      background: govuk-colour("black");
+      border-color: govuk-colour("black");
+    }
   }
 
   &--critical {
     background: govuk-colour("red");
+
+    .govuk-warning-text__icon {
+      color: govuk-colour("red");
+    }
+  }
+
+  .govuk-warning-text__icon {
+    width: 38px;
+    height: 38px;
   }
 }
