Updated New Case journey
Updated dependencies
Fixed Match screen data

--- a/src/styles/_warning-text.scss
+++ b/src/styles/_warning-text.scss
@@ -27,10 +27,10 @@
   }
 
   &--critical {
-    background: govuk-colour("red");
+    background: govuk-colour("light-pink");
 
     .govuk-warning-text__icon {
-      color: govuk-colour("red");
+      color: govuk-colour("light-pink");
     }
   }
 
