Updated add case journey
Included dashboard screen
Reinstated calendar view
Included basic dashboard filter links on case list

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -27,4 +27,16 @@ abbr {
 
 .app-\!-color-white {
   color: govuk-colour("white");
+
+  &.govuk-link {
+    color: govuk-colour("white");
+
+    &:hover {
+      color: govuk-colour("mid-grey") !important;
+    }
+
+    &:visited {
+      color: govuk-colour("white");
+    }
+  }
 }
