--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -29,6 +29,7 @@ $moj-light-color: govuk-tint($govuk-brand-colour, 97);
 @import "dashboard";
 @import "display";
 @import "layout";
+@import "progress-bar";
 @import "risk";
 @import "table";
 @import "tooltip";
